--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.1",
     "path": "^0.12.7",
     "request": "^2.88.2"
   },
