--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "body-parser": "^1.20.1",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.1",
     "path": "^0.12.7",
     "request": "^2.88.2"
