--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
+    "node-fetch": "^3.3.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.1",
     "path": "^0.12.7",
