--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
+    "font-awesome": "^4.7.0",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.9",
     "node-schedule": "^2.1.1",
